--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "casper",
+    "name": "bobtheme",
     "description": "A clean, minimal default theme for the Ghost publishing platform",
     "demo": "https://demo.ghost.io",
-    "version": "4.1.1",
+    "version": "1.0.0",
     "engines": {
         "ghost": ">=4.0.0",
         "ghost-api": "v4"
